--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONG_URI=mongodb+srv://pittarparkar56:pittar@mernapp.dti5ivl.mongodb.net/?retryWrites=true&w=majority
+MONG_URI=mongodb+srv://abhishekbante01:Abhishek@mernapp.fwxvb8d.mongodb.net/?retryWrites=true&w=majority&appName=MERNapp
 SECRET=hfbekbfhkebvfjvsdcjbdewfewkjbjkebgjlkre
