--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
 MONG_URI=mongodb+srv://abhishekbante01:abhishek@mernapp.fwxvb8d.mongodb.net/?retryWrites=true&w=majority&appName=MERNapp
 SECRET=hfbekbfhkebvfjvsdcjbdewfewkjbjkebgjlkre
+ACCESS_TOKEN_SECRET = AbhishekBante
