removed all credentials for security

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-MONG_URI=mongodb+srv://abhishekbante01:abhishek@mernapp.fwxvb8d.mongodb.net/?retryWrites=true&w=majority&appName=MERNapp
+MONG_URI=mongodb+srv://<your_id>:<your_password>@mernapp.fwxvb8d.mongodb.net/?retryWrites=true&w=majority&appName=MERNapp
 SECRET=hfbekbfhkebvfjvsdcjbdewfewkjbjkebgjlkre
 ACCESS_TOKEN_SECRET = AbhishekBante
 ACCESS_TOKEN_EXPIRY=1d
